--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 Hello world
-<img src="images/Dec-4-2025-1.jpg" alt="temple" style="width:100%; height:auto;">
+<img src="images/2025-12-4-1.jpg" alt="temple" style="width:30%; height:auto;">
+<img src="images/2025-4-11-1.jpg" alt="temple" style="width:30%; height:auto;">
+<img src="images/2025-5-12-1.jpg" alt="temple" style="width:30%; height:auto;">
 Temp
 dad
