--- a/index.html
+++ b/index.html
@@ -4,3 +4,9 @@
 <img src="images/2024-4-11-1.jpg" alt="temple" style="width:30%; height:auto;">
 <img src="images/2024-12-4-1.jpg" alt="temple" style="width:30%; height:auto;">
 <img src="images/2025-5-12-1.jpg" alt="temple" style="width:30%; height:auto;">
+<img src="images/2024-4-1-2.jpg" alt="temple" style="width:30%; height:auto;">
+<img src="images/2024-4-4-2.jpg" alt="temple" style="width:30%; height:auto;">
+<img src="images/2024-4-9-2.jpg" alt="temple" style="width:30%; height:auto;">
+<img src="images/2024-4-11-2.jpg" alt="temple" style="width:30%; height:auto;">
+<img src="images/2024-12-4-2.jpg" alt="temple" style="width:30%; height:auto;">
+<img src="images/2025-5-12-2.jpg" alt="temple" style="width:30%; height:auto;">
